--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="{{ site.lang | default: "en-US" }}">
+<html lang="{{ site.lang | default: 'en-US' }}">
   <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -15,11 +15,11 @@
       <div class="row">
         <div class="col-12 col-md-4 col-lg-3 p-0 sidemenu">
           <div class="p-2 mt-4 text-center">
-            <a href="{{ "/" | absolute_url }}">
+            <a href="{{ '/' | absolute_url }}">
               <img src="assets/logo.png" class="logo mb-3"/>
             </a>
             <br>
-            <a href="{{ "/" | absolute_url }}" class="lead link">
+            <a href="{{ '/' | absolute_url }}" class="lead link">
               {{ site.title | default: site.github.repository_name }}
             </a>
             <div class="subtitle">
@@ -27,10 +27,10 @@
             </div>
             <p class="text-light mt-3">
               Acepto pagos a traves de 
-              <a class="text-light" href="nik.androutsopoulos@gmail.com">
+              <a class="text-light" href="mailto:a_ioannis47@hotmail.com">
                 Payoneer
               </a>
-              <a class="text-light" href="https://www.PayPal.Me/nikand1987">
+              <a class="text-light" href="http://paypal.me/andjohn1947">
                 Paypal
               </a>
             </p>
@@ -42,7 +42,7 @@
           </p>
           <div>
             <hr>
-            <p>Este sitio web es propiedad y administrado por <a href="{{ site.github.owner_url }}">Nikolaos Androutsopoulos</a></p>
+            <p>Este sitio web es propiedad y administrado por <a href="{{ site.github.owner_url }}">Ioannis Androutsopoulos</a></p>
           </div>
         </div>
       </div>
